Move OS version check for AR Core from java to native

Additionally, add a call to check AR Core support from ArCoreDeviceProvider.

This will also fix an issue where not all options for supportsSession
call were being passed.

R=billorr@chromium.org, btebbs@chromium.org, mthiesse@chromium.org

Bug: 852607
Change-Id: I3e407fd001368cbdead0dbf271ee3bdca8188019
Reviewed-on: https://chromium-review.googlesource.com/c/1341025
Commit-Queue: Piotr Bialecki <bialpio@chromium.org>
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Reviewed-by: Bill Orr <billorr@chromium.org>
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609465}
Former-commit-id: d6456ac6874d409bdcf88c197c6673373aaa73c1