chrome/browser/android/vr/arcore_device/arcore_device_provider.cc
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/android/vr/arcore_device/arcore_device_provider.h"
 
 #include "chrome/browser/android/vr/arcore_device/arcore_device.h"
+#include "chrome/browser/android/vr/arcore_device/arcore_shim.h"
 
 namespace device {
 
@@ -19,10 +20,13 @@ void ArCoreDeviceProvider::Initialize(
                                  mojom::XRRuntimePtr)> add_device_callback,
     base::RepeatingCallback<void(mojom::XRDeviceId)> remove_device_callback,
     base::OnceClosure initialization_complete) {
-  arcore_device_ = base::WrapUnique(new ArCoreDevice());
-  add_device_callback.Run(arcore_device_->GetId(),
-                          arcore_device_->GetVRDisplayInfo(),
-                          arcore_device_->BindXRRuntimePtr());
+  if (vr::SupportsArCore())
+    arcore_device_ = std::make_unique<ArCoreDevice>();
+  if (arcore_device_) {
+    add_device_callback.Run(arcore_device_->GetId(),
+                            arcore_device_->GetVRDisplayInfo(),
+                            arcore_device_->BindXRRuntimePtr());
+  }
   initialized_ = true;
   std::move(initialization_complete).Run();
 }
