chrome/browser/android/vr/arcore_device/arcore_java_utils.cc
@@ -114,9 +114,10 @@ void ArCoreJavaUtils::OnRequestInstallArModuleResult(
 }
 
 bool ArCoreJavaUtils::EnsureLoaded() {
-  JNIEnv* env = AttachCurrentThread();
-  if (!Java_ArCoreJavaUtils_shouldLoadArCoreSdk(env))
+  if (!vr::SupportsArCore())
     return false;
+
+  JNIEnv* env = AttachCurrentThread();
 
   // TODO(crbug.com/884780): Allow loading the ARCore shim by name instead of by
   // absolute path.
